@@ -10,6 +10,7 @@ Version 1.7.11+svn:
  * Miscellaneous and bugfixes:
    * Fix scrolling during animation (bug 13106)
    * Fix drakes tipping their wings in the water when flying
+   * Fix some assertion failures when showing/hiding listbox items
 
 Version 1.7.11-1.8beta4:
  * Language and i18n:
